// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TaskBar /> > Snapshots > <Clock /> > should match snapshot 1`] = `
.c0 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c1 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c2 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="c1 c2"
    >
      10:00
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
          stroke="gray"
        />
        <path
          d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
          stroke="#fff"
        />
        <path
          d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
          stroke="#000"
        />
        <path
          d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
          stroke="silver"
        />
        <path
          d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
          stroke="red"
        />
        <path
          d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="green"
        />
        <path
          d="M16 16h1"
          stroke="maroon"
        />
        <path
          d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
          stroke="#00f"
        />
        <path
          d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="#ff0"
        />
        <path
          d="M16 21h1"
          stroke="navy"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with active prop 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c3 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #c3c7cb;
  width: auto;
  height: auto;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  outline: 1px dotted #000000;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
          stroke="gray"
        />
        <path
          d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
          stroke="#fff"
        />
        <path
          d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
          stroke="#000"
        />
        <path
          d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
          stroke="silver"
        />
        <path
          d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
          stroke="red"
        />
        <path
          d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="green"
        />
        <path
          d="M16 16h1"
          stroke="maroon"
        />
        <path
          d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
          stroke="#00f"
        />
        <path
          d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="#ff0"
        />
        <path
          d="M16 21h1"
          stroke="navy"
        />
      </svg>
    </div>
  </button>
  <button
    class="c3 c4"
  >
    <div
      class="c2"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
          stroke="gray"
        />
        <path
          d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
          stroke="#fff"
        />
        <path
          d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
          stroke="#000"
        />
        <path
          d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
          stroke="silver"
        />
        <path
          d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
          stroke="red"
        />
        <path
          d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="green"
        />
        <path
          d="M16 16h1"
          stroke="maroon"
        />
        <path
          d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
          stroke="#00f"
        />
        <path
          d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="#ff0"
        />
        <path
          d="M16 21h1"
          stroke="navy"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with icon prop 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
          stroke="gray"
        />
        <path
          d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
          stroke="#fff"
        />
        <path
          d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
          stroke="#000"
        />
        <path
          d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
          stroke="silver"
        />
        <path
          d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
          stroke="red"
        />
        <path
          d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="green"
        />
        <path
          d="M16 16h1"
          stroke="maroon"
        />
        <path
          d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
          stroke="#00f"
        />
        <path
          d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="#ff0"
        />
        <path
          d="M16 21h1"
          stroke="navy"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with small prop 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
          stroke="gray"
        />
        <path
          d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
          stroke="#fff"
        />
        <path
          d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
          stroke="#000"
        />
        <path
          d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
          stroke="silver"
        />
        <path
          d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
          stroke="red"
        />
        <path
          d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="green"
        />
        <path
          d="M16 16h1"
          stroke="maroon"
        />
        <path
          d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
          stroke="#00f"
        />
        <path
          d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="#ff0"
        />
        <path
          d="M16 21h1"
          stroke="navy"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot 1`] = `
.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c1 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c4 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c5 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c3 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <svg
          height="1em"
          shape-rendering="crispEdges"
          viewBox="0 -0.5 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 3h1M1 4h1m16 0h10M3 5h1m12 0h14M3 6h1m2 0h1m6 0h1m1 0h16M5 7h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 8h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 9h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 11h1m13 0h2m5 0h2m5 0h2M1 12h1m13 0h2m5 0h2m5 0h2M3 13h1m11 0h2m3 0h6m3 0h2M3 14h1m2 0h1m6 0h1m1 0h16M5 15h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 16h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 17h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 19h1m13 0h2m5 0h2m5 0h2M1 20h1m13 0h2m5 0h2m5 0h2M3 21h1m11 0h2m3 0h6m3 0h2M3 22h1m2 0h1m6 0h1m1 0h16M5 23h2m2 0h1m1 0h3m1 0h16M5 24h1m2 0h2m1 0h3m1 0h4m8 0h4M8 25h1m2 0h1m3 0h2m12 0h2"
            stroke="#000"
          />
          <path
            d="M1 7h1m18 0h2M1 8h1m15 0h5M3 9h1m13 0h5M3 10h1m2 0h1m6 0h1m3 0h5M5 11h2m2 0h1m1 0h3m3 0h5M5 12h1m2 0h2m1 0h3m3 0h5M8 13h1m2 0h1m5 0h1"
            stroke="red"
          />
          <path
            d="M18 7h2m-2 6h2"
            stroke="maroon"
          />
          <path
            d="M24 7h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#0f0"
          />
          <path
            d="M26 7h2m-2 6h2"
            stroke="green"
          />
          <path
            d="M1 15h1m18 0h2M1 16h1m15 0h5M3 17h1m13 0h5M3 18h1m2 0h1m6 0h1m3 0h5M5 19h2m2 0h1m1 0h3m3 0h5M5 20h1m2 0h2m1 0h3m3 0h5M8 21h1m2 0h1m5 0h1"
            stroke="#00f"
          />
          <path
            d="M18 15h2m-2 6h2"
            stroke="navy"
          />
          <path
            d="M24 15h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#ff0"
          />
          <path
            d="M26 15h2m-2 6h2"
            stroke="olive"
          />
        </svg>
      </div>
      Start
    </button>
    <div
      class="c4"
      display="flex"
    />
    <div
      class="c5"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c6 c7"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 1`] = `
.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c1 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c4 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c5 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c3 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <svg
          height="1em"
          shape-rendering="crispEdges"
          viewBox="0 -0.5 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 3h1M1 4h1m16 0h10M3 5h1m12 0h14M3 6h1m2 0h1m6 0h1m1 0h16M5 7h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 8h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 9h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 11h1m13 0h2m5 0h2m5 0h2M1 12h1m13 0h2m5 0h2m5 0h2M3 13h1m11 0h2m3 0h6m3 0h2M3 14h1m2 0h1m6 0h1m1 0h16M5 15h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 16h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 17h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 19h1m13 0h2m5 0h2m5 0h2M1 20h1m13 0h2m5 0h2m5 0h2M3 21h1m11 0h2m3 0h6m3 0h2M3 22h1m2 0h1m6 0h1m1 0h16M5 23h2m2 0h1m1 0h3m1 0h16M5 24h1m2 0h2m1 0h3m1 0h4m8 0h4M8 25h1m2 0h1m3 0h2m12 0h2"
            stroke="#000"
          />
          <path
            d="M1 7h1m18 0h2M1 8h1m15 0h5M3 9h1m13 0h5M3 10h1m2 0h1m6 0h1m3 0h5M5 11h2m2 0h1m1 0h3m3 0h5M5 12h1m2 0h2m1 0h3m3 0h5M8 13h1m2 0h1m5 0h1"
            stroke="red"
          />
          <path
            d="M18 7h2m-2 6h2"
            stroke="maroon"
          />
          <path
            d="M24 7h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#0f0"
          />
          <path
            d="M26 7h2m-2 6h2"
            stroke="green"
          />
          <path
            d="M1 15h1m18 0h2M1 16h1m15 0h5M3 17h1m13 0h5M3 18h1m2 0h1m6 0h1m3 0h5M5 19h2m2 0h1m1 0h3m3 0h5M5 20h1m2 0h2m1 0h3m3 0h5M8 21h1m2 0h1m5 0h1"
            stroke="#00f"
          />
          <path
            d="M18 15h2m-2 6h2"
            stroke="navy"
          />
          <path
            d="M24 15h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#ff0"
          />
          <path
            d="M26 15h2m-2 6h2"
            stroke="olive"
          />
        </svg>
      </div>
      Start
    </button>
    <div
      class="c4"
      display="flex"
    />
    <div
      class="c5"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c6 c7"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 2`] = `
.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c7 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c8 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c1 {
  position: absolute;
  bottom: 28px;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c4 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #c3c7cb;
  width: auto;
  height: auto;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 2px 6px;
  color: #000000;
}

.c3 img {
  margin-right: 10px;
}

.c3:hover {
  background-color: #000e7a;
  color: #ffffff;
}

.c3 ul {
  display: none;
  position: absolute;
  top: -2px;
  left: 97%;
  color: #000000;
  z-index: 2;
}

.c3 ul img {
  width: 18px;
  height: 20px;
  margin-right: 6px;
}

.c3 svg {
  fill: #ffffff;
}

.c2 {
  background-color: #c3c7cb;
  padding: 5px 20px 6px;
  border: none;
  margin: 0;
  padding: 2px;
  list-style: none;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: 200px;
}

.c9 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c10 div:first-child {
  right: 0;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  outline: 1px dotted #000000;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

.c6 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      class="c1"
    >
      <ul
        class="c2"
        width="200"
      >
        <li
          class="c3 default"
        >
          <svg
            height="1em"
            shape-rendering="crispEdges"
            viewBox="0 -0.5 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 15h26M3 16h1m25 0h1M2 17h1m25 0h2M1 18h1m25 0h3M1 19h1m25 0h3M1 20h1m25 0h3M1 21h1m25 0h3M1 22h1m2 0h21m2 0h3M1 23h1m25 0h3M1 24h1m2 0h21m2 0h3M1 25h1m25 0h3M1 26h1m25 0h2M1 27h27"
              stroke="gray"
            />
            <path
              d="M4 16h25M3 17h25M3 19h19m3 0h2M3 20h19m3 0h2M3 21h24M3 22h1m21 0h2M3 23h1m21 0h2M3 24h1m21 0h2M3 25h1m21 0h2M3 26h24"
              stroke="silver"
            />
            <path
              d="M30 16h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-2 1h1m-2 1h1M2 28h26"
              stroke="#000"
            />
            <path
              d="M2 18h25M2 19h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m1 0h21M2 24h1m-1 1h1m1 0h21M2 26h1"
              stroke="#fff"
            />
            <path
              d="M22 19h3"
              stroke="#0f0"
            />
            <path
              d="M22 20h3"
              stroke="green"
            />
          </svg>
          Local Disk (C:)
        </li>
        <li
          class="c3 default"
        >
          <svg
            height="1em"
            shape-rendering="crispEdges"
            viewBox="0 -0.5 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 0h9M3 1h1m9 0h1M2 2h1m11 0h1M1 3h1m13 0h1M0 4h30M0 5h1m29 0h1M0 6h1m30 0h1M0 7h1m8 0h5m17 0h1M0 8h1m6 0h2m5 0h2m15 0h1M0 9h1m5 0h1m9 0h1m14 0h1M0 10h1m4 0h1m11 0h1m13 0h1M0 11h1m4 0h1m3 0h1m7 0h1m13 0h1M0 12h1m3 0h1m4 0h1m8 0h1m12 0h1M0 13h1m3 0h1m3 0h1m9 0h1m12 0h1M0 14h1m3 0h1m3 0h1m9 0h1m12 0h1M0 15h1m3 0h1m3 0h1m9 0h1m12 0h1M0 16h1m3 0h1m13 0h1m12 0h1M0 17h1m4 0h1m11 0h1m13 0h1M0 18h1m4 0h1m11 0h1m13 0h1M0 19h1m5 0h1m9 0h1m1 0h1m12 0h1M0 20h1m6 0h2m5 0h2m3 0h1m11 0h1M0 21h1m8 0h6m4 0h2m10 0h1M0 22h1m14 0h1m2 0h1m2 0h1m9 0h1M0 23h1m15 0h2m4 0h1m8 0h1M0 24h1m16 0h1m5 0h1m7 0h1M0 25h1m17 0h1m5 0h1m6 0h1M1 26h19m5 0h6m-11 1h1m5 0h1m-6 1h1m5 0h1m-6 1h1m4 0h1m-5 1h1m3 0h1m-4 1h3"
              stroke="#000"
            />
            <path
              d="M4 1h9M3 2h11M2 3h13M1 5h29M1 6h30M1 7h8m5 0h17M1 8h6m2 0h5m2 0h15M1 9h5m1 0h9m1 0h14M1 10h4m1 0h11m1 0h13M1 11h4m1 0h3m1 0h7m1 0h13M1 12h3m1 0h4m1 0h8m1 0h12M1 13h3m1 0h3m1 0h9m1 0h12M1 14h3m1 0h3m1 0h9m1 0h12M1 15h3m1 0h3m1 0h9m1 0h12M1 16h3m1 0h13m1 0h12M1 17h4m1 0h11m1 0h13M1 18h4m1 0h11m1 0h13M1 19h5m1 0h9m1 0h1m1 0h12M1 20h6m2 0h5m2 0h3m1 0h11M1 21h8m6 0h4m2 0h10M1 22h14m1 0h2m1 0h2m1 0h9M1 23h15m2 0h4m1 0h8M1 24h16m1 0h5m1 0h7M1 25h17m1 0h5m1 0h6m-11 1h5m-4 1h5m-4 1h5m-4 1h4m-3 1h3"
              stroke="#fff"
            />
          </svg>
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <svg
          height="1em"
          shape-rendering="crispEdges"
          viewBox="0 -0.5 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 3h1M1 4h1m16 0h10M3 5h1m12 0h14M3 6h1m2 0h1m6 0h1m1 0h16M5 7h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 8h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 9h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 11h1m13 0h2m5 0h2m5 0h2M1 12h1m13 0h2m5 0h2m5 0h2M3 13h1m11 0h2m3 0h6m3 0h2M3 14h1m2 0h1m6 0h1m1 0h16M5 15h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 16h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 17h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 19h1m13 0h2m5 0h2m5 0h2M1 20h1m13 0h2m5 0h2m5 0h2M3 21h1m11 0h2m3 0h6m3 0h2M3 22h1m2 0h1m6 0h1m1 0h16M5 23h2m2 0h1m1 0h3m1 0h16M5 24h1m2 0h2m1 0h3m1 0h4m8 0h4M8 25h1m2 0h1m3 0h2m12 0h2"
            stroke="#000"
          />
          <path
            d="M1 7h1m18 0h2M1 8h1m15 0h5M3 9h1m13 0h5M3 10h1m2 0h1m6 0h1m3 0h5M5 11h2m2 0h1m1 0h3m3 0h5M5 12h1m2 0h2m1 0h3m3 0h5M8 13h1m2 0h1m5 0h1"
            stroke="red"
          />
          <path
            d="M18 7h2m-2 6h2"
            stroke="maroon"
          />
          <path
            d="M24 7h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#0f0"
          />
          <path
            d="M26 7h2m-2 6h2"
            stroke="green"
          />
          <path
            d="M1 15h1m18 0h2M1 16h1m15 0h5M3 17h1m13 0h5M3 18h1m2 0h1m6 0h1m3 0h5M5 19h2m2 0h1m1 0h3m3 0h5M5 20h1m2 0h2m1 0h3m3 0h5M8 21h1m2 0h1m5 0h1"
            stroke="#00f"
          />
          <path
            d="M18 15h2m-2 6h2"
            stroke="navy"
          />
          <path
            d="M24 15h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#ff0"
          />
          <path
            d="M26 15h2m-2 6h2"
            stroke="olive"
          />
        </svg>
      </div>
      Start
    </button>
    <div
      class="c7"
      display="flex"
    />
    <div
      class="c8"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c9 c10"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with one Modal 1`] = `
.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c8 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c9 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c12 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c16 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c13 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #e6e6e6;
  width: auto;
  height: auto;
}

.c1 {
  color: #fefefe;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-weight: 600;
  font-size: 10px;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:first-child {
  margin-right: 0;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c2 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #000e7a;
}

.c2 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
  text-shadow: 0.5px 0px white,1.5px 0px white;
  color: transparent;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c17 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c18 div:first-child {
  right: 0;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c11 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

.c15 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  text-align: left;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 c2 default"
      color="headerText"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
          stroke="gray"
        />
        <path
          d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
          stroke="#fff"
        />
        <path
          d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
          stroke="#000"
        />
        <path
          d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
          stroke="silver"
        />
        <path
          d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
          stroke="red"
        />
        <path
          d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="green"
        />
        <path
          d="M16 16h1"
          stroke="maroon"
        />
        <path
          d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
          stroke="#00f"
        />
        <path
          d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="#ff0"
        />
        <path
          d="M16 21h1"
          stroke="navy"
        />
      </svg>
      <div
        class="c3 draggable"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5 c6"
        >
          ?
        </li>
        <li
          class="c5 c6"
        >
          X
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c8"
    display="flex"
  >
    <button
      class="c9 c10"
    >
      <div
        class="c11"
      >
        <svg
          height="1em"
          shape-rendering="crispEdges"
          viewBox="0 -0.5 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 3h1M1 4h1m16 0h10M3 5h1m12 0h14M3 6h1m2 0h1m6 0h1m1 0h16M5 7h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 8h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 9h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 11h1m13 0h2m5 0h2m5 0h2M1 12h1m13 0h2m5 0h2m5 0h2M3 13h1m11 0h2m3 0h6m3 0h2M3 14h1m2 0h1m6 0h1m1 0h16M5 15h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 16h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 17h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 19h1m13 0h2m5 0h2m5 0h2M1 20h1m13 0h2m5 0h2m5 0h2M3 21h1m11 0h2m3 0h6m3 0h2M3 22h1m2 0h1m6 0h1m1 0h16M5 23h2m2 0h1m1 0h3m1 0h16M5 24h1m2 0h2m1 0h3m1 0h4m8 0h4M8 25h1m2 0h1m3 0h2m12 0h2"
            stroke="#000"
          />
          <path
            d="M1 7h1m18 0h2M1 8h1m15 0h5M3 9h1m13 0h5M3 10h1m2 0h1m6 0h1m3 0h5M5 11h2m2 0h1m1 0h3m3 0h5M5 12h1m2 0h2m1 0h3m3 0h5M8 13h1m2 0h1m5 0h1"
            stroke="red"
          />
          <path
            d="M18 7h2m-2 6h2"
            stroke="maroon"
          />
          <path
            d="M24 7h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#0f0"
          />
          <path
            d="M26 7h2m-2 6h2"
            stroke="green"
          />
          <path
            d="M1 15h1m18 0h2M1 16h1m15 0h5M3 17h1m13 0h5M3 18h1m2 0h1m6 0h1m3 0h5M5 19h2m2 0h1m1 0h3m3 0h5M5 20h1m2 0h2m1 0h3m3 0h5M8 21h1m2 0h1m5 0h1"
            stroke="#00f"
          />
          <path
            d="M18 15h2m-2 6h2"
            stroke="navy"
          />
          <path
            d="M24 15h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#ff0"
          />
          <path
            d="M26 15h2m-2 6h2"
            stroke="olive"
          />
        </svg>
      </div>
      Start
    </button>
    <div
      class="c12"
      display="flex"
    >
      <button
        class="c13 c14"
      >
        <div
          class="c11"
        >
          <svg
            height="1em"
            shape-rendering="crispEdges"
            viewBox="0 -0.5 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
              stroke="gray"
            />
            <path
              d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
              stroke="#fff"
            />
            <path
              d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
              stroke="#000"
            />
            <path
              d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
              stroke="silver"
            />
            <path
              d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
              stroke="red"
            />
            <path
              d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
              stroke="green"
            />
            <path
              d="M16 16h1"
              stroke="maroon"
            />
            <path
              d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
              stroke="#00f"
            />
            <path
              d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
              stroke="#ff0"
            />
            <path
              d="M16 21h1"
              stroke="navy"
            />
          </svg>
        </div>
        <span
          class="c15"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c16"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c17 c18"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with two Modals 1`] = `
.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c1 {
  color: #c6c6c6;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c11 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c12 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c15 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c19 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c18 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #e6e6e6;
  width: auto;
  height: auto;
}

.c9 {
  color: #fefefe;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-weight: 600;
  font-size: 10px;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:first-child {
  margin-right: 0;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c2 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #7f787f;
}

.c2 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c10 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #000e7a;
}

.c10 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
  text-shadow: 0.5px 0px white,1.5px 0px white;
  color: transparent;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c20 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c21 div:first-child {
  right: 0;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c14 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

.c17 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  text-align: left;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 c2 default"
      color="headerNotActiveText"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h9M3 1h1m9 0h1M2 2h1m11 0h1M1 3h1m13 0h1M0 4h30M0 5h1m29 0h1M0 6h1m30 0h1M0 7h1m8 0h5m17 0h1M0 8h1m6 0h2m5 0h2m15 0h1M0 9h1m5 0h1m9 0h1m14 0h1M0 10h1m4 0h1m11 0h1m13 0h1M0 11h1m4 0h1m3 0h1m7 0h1m13 0h1M0 12h1m3 0h1m4 0h1m8 0h1m12 0h1M0 13h1m3 0h1m3 0h1m9 0h1m12 0h1M0 14h1m3 0h1m3 0h1m9 0h1m12 0h1M0 15h1m3 0h1m3 0h1m9 0h1m12 0h1M0 16h1m3 0h1m13 0h1m12 0h1M0 17h1m4 0h1m11 0h1m13 0h1M0 18h1m4 0h1m11 0h1m13 0h1M0 19h1m5 0h1m9 0h1m1 0h1m12 0h1M0 20h1m6 0h2m5 0h2m3 0h1m11 0h1M0 21h1m8 0h6m4 0h2m10 0h1M0 22h1m14 0h1m2 0h1m2 0h1m9 0h1M0 23h1m15 0h2m4 0h1m8 0h1M0 24h1m16 0h1m5 0h1m7 0h1M0 25h1m17 0h1m5 0h1m6 0h1M1 26h19m5 0h6m-11 1h1m5 0h1m-6 1h1m5 0h1m-6 1h1m4 0h1m-5 1h1m3 0h1m-4 1h3"
          stroke="#000"
        />
        <path
          d="M4 1h9M3 2h11M2 3h13M1 5h29M1 6h30M1 7h8m5 0h17M1 8h6m2 0h5m2 0h15M1 9h5m1 0h9m1 0h14M1 10h4m1 0h11m1 0h13M1 11h4m1 0h3m1 0h7m1 0h13M1 12h3m1 0h4m1 0h8m1 0h12M1 13h3m1 0h3m1 0h9m1 0h12M1 14h3m1 0h3m1 0h9m1 0h12M1 15h3m1 0h3m1 0h9m1 0h12M1 16h3m1 0h13m1 0h12M1 17h4m1 0h11m1 0h13M1 18h4m1 0h11m1 0h13M1 19h5m1 0h9m1 0h1m1 0h12M1 20h6m2 0h5m2 0h3m1 0h11M1 21h8m6 0h4m2 0h10M1 22h14m1 0h2m1 0h2m1 0h9M1 23h15m2 0h4m1 0h8M1 24h16m1 0h5m1 0h7M1 25h17m1 0h5m1 0h6m-11 1h5m-4 1h5m-4 1h5m-4 1h4m-3 1h3"
          stroke="#fff"
        />
      </svg>
      <div
        class="c3 draggable"
      >
        Windows Explorer
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5 c6"
        >
          ?
        </li>
        <li
          class="c5 c6"
        >
          X
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c8 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c9 c10 default"
      color="headerText"
    >
      <svg
        height="1em"
        shape-rendering="crispEdges"
        viewBox="0 -0.5 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
          stroke="gray"
        />
        <path
          d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
          stroke="#fff"
        />
        <path
          d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
          stroke="#000"
        />
        <path
          d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
          stroke="silver"
        />
        <path
          d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
          stroke="red"
        />
        <path
          d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="green"
        />
        <path
          d="M16 16h1"
          stroke="maroon"
        />
        <path
          d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
          stroke="#00f"
        />
        <path
          d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
          stroke="#ff0"
        />
        <path
          d="M16 21h1"
          stroke="navy"
        />
      </svg>
      <div
        class="c3 draggable"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5 c6"
        >
          ?
        </li>
        <li
          class="c5 c6"
        >
          X
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12 c13"
    >
      <div
        class="c14"
      >
        <svg
          height="1em"
          shape-rendering="crispEdges"
          viewBox="0 -0.5 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 3h1M1 4h1m16 0h10M3 5h1m12 0h14M3 6h1m2 0h1m6 0h1m1 0h16M5 7h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 8h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 9h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 11h1m13 0h2m5 0h2m5 0h2M1 12h1m13 0h2m5 0h2m5 0h2M3 13h1m11 0h2m3 0h6m3 0h2M3 14h1m2 0h1m6 0h1m1 0h16M5 15h2m2 0h1m1 0h3m1 0h3m4 0h2m4 0h3M5 16h1m2 0h2m1 0h3m1 0h2m5 0h2m5 0h2M8 17h1m2 0h1m3 0h2m5 0h2m5 0h2m-16 1h2m5 0h2m5 0h2M1 19h1m13 0h2m5 0h2m5 0h2M1 20h1m13 0h2m5 0h2m5 0h2M3 21h1m11 0h2m3 0h6m3 0h2M3 22h1m2 0h1m6 0h1m1 0h16M5 23h2m2 0h1m1 0h3m1 0h16M5 24h1m2 0h2m1 0h3m1 0h4m8 0h4M8 25h1m2 0h1m3 0h2m12 0h2"
            stroke="#000"
          />
          <path
            d="M1 7h1m18 0h2M1 8h1m15 0h5M3 9h1m13 0h5M3 10h1m2 0h1m6 0h1m3 0h5M5 11h2m2 0h1m1 0h3m3 0h5M5 12h1m2 0h2m1 0h3m3 0h5M8 13h1m2 0h1m5 0h1"
            stroke="red"
          />
          <path
            d="M18 7h2m-2 6h2"
            stroke="maroon"
          />
          <path
            d="M24 7h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#0f0"
          />
          <path
            d="M26 7h2m-2 6h2"
            stroke="green"
          />
          <path
            d="M1 15h1m18 0h2M1 16h1m15 0h5M3 17h1m13 0h5M3 18h1m2 0h1m6 0h1m3 0h5M5 19h2m2 0h1m1 0h3m3 0h5M5 20h1m2 0h2m1 0h3m3 0h5M8 21h1m2 0h1m5 0h1"
            stroke="#00f"
          />
          <path
            d="M18 15h2m-2 6h2"
            stroke="navy"
          />
          <path
            d="M24 15h2m-2 1h5m-5 1h5m-5 1h5m-5 1h5m-5 1h5m-1 1h1"
            stroke="#ff0"
          />
          <path
            d="M26 15h2m-2 6h2"
            stroke="olive"
          />
        </svg>
      </div>
      Start
    </button>
    <div
      class="c15"
      display="flex"
    >
      <button
        class="c12 c16"
      >
        <div
          class="c14"
        >
          <svg
            height="1em"
            shape-rendering="crispEdges"
            viewBox="0 -0.5 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 0h9M3 1h1m9 0h1M2 2h1m11 0h1M1 3h1m13 0h1M0 4h30M0 5h1m29 0h1M0 6h1m30 0h1M0 7h1m8 0h5m17 0h1M0 8h1m6 0h2m5 0h2m15 0h1M0 9h1m5 0h1m9 0h1m14 0h1M0 10h1m4 0h1m11 0h1m13 0h1M0 11h1m4 0h1m3 0h1m7 0h1m13 0h1M0 12h1m3 0h1m4 0h1m8 0h1m12 0h1M0 13h1m3 0h1m3 0h1m9 0h1m12 0h1M0 14h1m3 0h1m3 0h1m9 0h1m12 0h1M0 15h1m3 0h1m3 0h1m9 0h1m12 0h1M0 16h1m3 0h1m13 0h1m12 0h1M0 17h1m4 0h1m11 0h1m13 0h1M0 18h1m4 0h1m11 0h1m13 0h1M0 19h1m5 0h1m9 0h1m1 0h1m12 0h1M0 20h1m6 0h2m5 0h2m3 0h1m11 0h1M0 21h1m8 0h6m4 0h2m10 0h1M0 22h1m14 0h1m2 0h1m2 0h1m9 0h1M0 23h1m15 0h2m4 0h1m8 0h1M0 24h1m16 0h1m5 0h1m7 0h1M0 25h1m17 0h1m5 0h1m6 0h1M1 26h19m5 0h6m-11 1h1m5 0h1m-6 1h1m5 0h1m-6 1h1m4 0h1m-5 1h1m3 0h1m-4 1h3"
              stroke="#000"
            />
            <path
              d="M4 1h9M3 2h11M2 3h13M1 5h29M1 6h30M1 7h8m5 0h17M1 8h6m2 0h5m2 0h15M1 9h5m1 0h9m1 0h14M1 10h4m1 0h11m1 0h13M1 11h4m1 0h3m1 0h7m1 0h13M1 12h3m1 0h4m1 0h8m1 0h12M1 13h3m1 0h3m1 0h9m1 0h12M1 14h3m1 0h3m1 0h9m1 0h12M1 15h3m1 0h3m1 0h9m1 0h12M1 16h3m1 0h13m1 0h12M1 17h4m1 0h11m1 0h13M1 18h4m1 0h11m1 0h13M1 19h5m1 0h9m1 0h1m1 0h12M1 20h6m2 0h5m2 0h3m1 0h11M1 21h8m6 0h4m2 0h10M1 22h14m1 0h2m1 0h2m1 0h9M1 23h15m2 0h4m1 0h8M1 24h16m1 0h5m1 0h7M1 25h17m1 0h5m1 0h6m-11 1h5m-4 1h5m-4 1h5m-4 1h4m-3 1h3"
              stroke="#fff"
            />
          </svg>
        </div>
        <span
          class="c17"
        >
          Windows Explorer
        </span>
      </button>
      <button
        class="c18 c16"
      >
        <div
          class="c14"
        >
          <svg
            height="1em"
            shape-rendering="crispEdges"
            viewBox="0 -0.5 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 0h20M4 1h1m18 0h1M4 2h1m18 0h2M4 3h1m18 0h1m1 0h1M4 4h1m18 0h1m2 0h1M4 5h1m18 0h1m3 0h1M4 6h1m18 0h1M4 7h1M4 8h1M4 9h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1"
              stroke="gray"
            />
            <path
              d="M5 1h18M5 2h18M5 3h18M5 4h18m1 0h1M5 5h18m1 0h2M5 6h18M5 7h23M5 8h23M5 9h23M5 10h13m4 0h6M5 11h11m8 0h4M5 12h4m1 0h5m10 0h3M5 13h4m1 0h1m1 0h1m12 0h3M5 14h6m14 0h3M5 15h4m1 0h5m10 0h3M5 16h4m1 0h1m1 0h1m12 0h3M5 17h6m14 0h3M5 18h4m1 0h5m10 0h3M5 19h4m1 0h1m1 0h1m12 0h3M5 20h6m14 0h3M5 21h4m1 0h5m10 0h3M5 22h4m1 0h1m1 0h1m5 0h4m3 0h3M5 23h6m5 0h8m1 0h3M5 24h23M5 25h23M5 26h23M5 27h23M5 28h23M5 29h23"
              stroke="#fff"
            />
            <path
              d="M24 1h1m0 1h1m0 1h1m0 1h1m0 1h1m-5 1h6m-1 1h1m-1 1h1m-1 1h1m-12 1h4m7 0h1m-14 1h8m5 0h1M9 12h1m5 0h3m1 0h1m2 0h3m4 0h1M9 13h1m1 0h1m1 0h4m2 0h1m3 0h2m4 0h1m-19 1h5m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1m-15 1h1m1 0h8m4 0h1m-15 1h3m1 0h1m2 0h3m4 0h1m-15 1h2m2 0h1m3 0h2m4 0h1m-15 1h1m3 0h1m3 0h2m4 0h1m-15 1h1m2 0h4m1 0h2m4 0h1M9 21h1m5 0h1m1 0h8m4 0h1M9 22h1m1 0h1m1 0h5m4 0h3m4 0h1m-19 1h5m8 0h1m4 0h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M4 31h26"
              stroke="#000"
            />
            <path
              d="M24 3h1m0 1h1m0 1h1m1 2h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1m-1 1h1M5 30h24"
              stroke="silver"
            />
            <path
              d="M18 12h1m-2 1h2m-3 1h3M9 15h1m6 0h2m-9 1h1m1 0h1m1 0h2m-4 1h4"
              stroke="red"
            />
            <path
              d="M20 12h2m-2 1h3m-3 1h3m-1 1h1"
              stroke="green"
            />
            <path
              d="M16 16h1"
              stroke="maroon"
            />
            <path
              d="M18 17h1M9 18h1m7 0h2M9 19h1m1 0h1m1 0h2m1 0h3m-8 1h4m1 0h2"
              stroke="#00f"
            />
            <path
              d="M20 17h2m-2 1h3m-3 1h3m-1 1h1"
              stroke="#ff0"
            />
            <path
              d="M16 21h1"
              stroke="navy"
            />
          </svg>
        </div>
        <span
          class="c17"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c19"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c20 c21"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;
